installed with the old system.)

=item * Add-ons may register new links in the left-navigation area.

=item * Add-ons may selectively override core Krang classes via
inheritence and the use of the C<conf/class.conf> configuration file.

=item * Add-ons may include SQL source for new tables which will be
included in the databases built by C<krang_createdb>.

=back

=back

=head2 v1.102 - April 18th 2004

=over

=item *

Added a new Krang::ElementClass method, mark_form_invalid().  This
method may be overriden to alter how Krang marks element form fields
invalid.  The default behvior, wrapping the field in a span set to the
"invalid" class remains. [Sam]

=item *

Upgraded to the latest release of HTML::PopupTreeSelect, v1.5. [Sam]

=item *

Improved support for Mac OSX, both in compilation and
documentation. [Aaron Ross]

=item *

Fixed amusing bug in Krang::Test::Content that was causing the same random
word sequences to be generated multiple times when called in a tight loop.
[Perrin]

=item *

Fixes to the import process as it affects L<Krang::ListItem>
objects - list orders are now preserved properly.  [Peter]

=item *

Can now bundle L<Krang::List> data with your element library, and have
it imported when the database is created (in the same fashion as
C<templates.kds>).  The file is C<lists.kds>.  [Peter]

=item *

Added C<slug> as a variable available to all templates at
publish-time.  This was intended to be there all along, but somehow
fell through the cracks.  [Peter]

=item *

L<Krang::ElementClass::ListGroup> now handles multidimensional lists
of arbitrary depth.  Further testing is needed, but so far things look
good.  [Peter Leonard, Andrea Bonotto]

=item *

Fixed a bug in L<Krang::DataSet> with loading compressed C<.kds.gz> files
and added a test for it.  Also fixed bug in dataset.t where it was not
skipping all the tests that need TestSet1 when TestSet1 is not available
[Perrin]

=item *
