@@ -50,10 +50,20 @@ sub new {
                                                    default => ["Sprinks",
                                                                "Classifieds",
                                                               ]),
-                 Krang::ElementClass::Textarea->new(name => "paragraph",
-                                                    required => 1,
-                                                    bulk_edit => 1,
-                                                   ),
+                 Krang::ElementClass::XinhaEditor->new(name => "paragraph",
+                                                     required => 1,
+                                                     bulk_edit => 0,
+                                                    ),
+                 Krang::ElementClass::XinhaEditor->new(name => "std_paragraph",
+                                                       toolbar_config => 'standard',
+                                                     required => 1,
+                                                     bulk_edit => 0,
+                                                    ),
+                 Krang::ElementClass::XinhaEditor->new(name => "fancy_paragraph",
+                                                       toolbar_config => 'all',
+                                                     required => 1,
+                                                     bulk_edit => 0,
+                                                    ),
                  Krang::ElementClass::Textarea->new(name => "pull_quote",
                                                     required => 1,
                                                     rows     => 2,
